# ascon

./: .gitignore  CMakeLists.txt  LWC_AEAD_KAT_128_128.txt  README.md  build_run.sh  notes.md
include/: ascon.h  encrypt_decrypt.h  permutations.h  read_csr.h
src/: decrypt.c  encrypt.c  main.c  round.c
